syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "MailDelivery";

package com.sourceforgery.tachikoma.maildelivery;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "com/sourceforgery/tachikoma/maildelivery/common.proto";

service MailDeliveryService {
    rpc sendEmail(OutgoingEmail) returns (stream MessageStatus);
}

message EmailRecipient {
    oneof to {
        NamedEmail namedEmail = 1;
        Email email = 2;
    }

    google.protobuf.Struct templateMergeVars = 3;
    map<string, string> metadata = 4;
}

message TrackingData {
    string trackingDomain = 1;

    // Not sent, but used in search and as metadata
    repeated string tags = 2;

    // Data for e.g. callback processing
    map<string, string> metadata = 3;

    // Add these options as query parameters to all links
    repeated string googleAnalyticsDomains = 4;
    repeated string googleAnalyticsCampaign = 5;
}

message TemplateBody {
    string htmlTemplate = 1;
    string plaintextTemplate = 2;
    google.protobuf.Struct globalMergeVars = 3;
}

enum TemplateEngine {
    HANDLEBARS = 0;
    MUSTASCH = 1;
}

message StaticBody {
    string htmlBody = 1;
    string plaintextBody = 2;
    string subject = 3;
}

message OutgoingEmail {
    // Recipients of the email
    repeated EmailRecipient recipients = 101;
    Email bcc = 102;
    NamedEmail from = 103;

    oneof body {
        StaticBody static = 201;
        TemplateBody template = 202;
    }

    map<string, string> headers = 301;
    TrackingData trackingData = 302;
    bool preserveRecipients = 303;
    // Not used atm
    google.protobuf.Timestamp sendAt = 304;
    string signingDomain = 305;
    string returnPathDomain = 306;
}
